--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Softinc">
-        <activity android:name=".TelaPrincipal"></activity>
+        <activity android:name=".AlteraDados"></activity>
+        <activity android:name=".TelaPrincipal" />
         <activity android:name=".startup" />
         <activity
             android:name=".signup"
